--- a/main.css
+++ b/main.css
@@ -1,4 +1,46 @@
-/* cia bus mano stilius */
 body {
     background-color:#f8f8f8;
 }
+    header{
+        display: inline-block;
+        width: 1000px;
+        margin-left: calc( (100% - 1000px) / 2);
+    }
+        
+        header > img {
+            display: inline-block;
+            float: left; 
+        }
+        nav {
+            display: inline-block;
+            float: right;
+        }
+
+            a {
+
+            }
+            a:last-of-type {
+        
+            }
+    main {
+        display: inline-block;
+        width: 1000px;
+        margin-left: calc( (100% - 1000px) / 2);
+    }
+        div {
+            display: inline-block;
+            width: 40%;
+            float: :left;
+            margin-top: 100px;
+        }
+            h1 {
+
+            }
+            p {
+
+            }
+        main > img {
+            display: inline-block;
+            width: 50%;
+            float: right;
+        }
