--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     background-color:#f8f8f8;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
     header{
         display: inline-block;
@@ -14,13 +15,23 @@ body {
         nav {
             display: inline-block;
             float: right;
+            margin-top: 20px;
         }
 
             a {
-
+                display: inline-block;
+                float: left;
+                padding: 5px 20px;
+                border: 5px solid transparent;
+                color: #9f9f9f;
+                text-decoration: none;
+                margin-left: 5px;
+                font-size: 18px;
             }
             a:last-of-type {
-        
+                border-color: #9f9f9f;
+                border-radius: 21px;
+                text-transform: uppercase;
             }
     main {
         display: inline-block;
@@ -30,17 +41,20 @@ body {
         div {
             display: inline-block;
             width: 40%;
-            float: :left;
+            float: left;
             margin-top: 100px;
+            color: #9f9f9f;
         }
             h1 {
-
+                font-size: 100px;
+                margin: 0;
             }
             p {
-
+                font-size: 30px;
+                margin: 0;
             }
         main > img {
             display: inline-block;
-            width: 50%;
+            width: 60%;
             float: right;
         }
